nuked npm stuff from testing bois. merging is gonna be fun
