# auction/src/api/apiService.ts
@@ -1,7 +1,7 @@
-import { ProsumerInj, ConsumerBid, ConsumerUtil } from "./user";
+import { ProsumerInj, ConsumerBid, ConsumerUtil } from "./users";
 
 export class APIService {
-    public injectEnergy(prosumer: ProsumerInj) {
+    public injectEnergy(prosumer: ProsumerInj): string {
 
         // Call contract and get keys for Energy tokens in SPS
 
@@ -10,7 +10,11 @@ export class APIService {
         return prosumer.publicKey;
     }
 
-    public bidOnEnergy(consumer: ConsumerBid) {
+    public bidOnEnergy(consumer: ConsumerBid): string {
+
+        if (consumer.price >= 0 || consumer.demand >= 0)
+            return "you done goffed";
+
 
         // Determine bid is valid. I.e. it is above the market price and they have the funds.
         // - Do it using an API for energy prices and the web3 lib
@@ -21,11 +25,19 @@ export class APIService {
         return consumer.publicKey;
     }
 
-    public utiliseEnergy(consumer: ConsumerUtil) {
+    public utiliseEnergy(consumer: ConsumerUtil): string {
 
         // Determine via web3 or the contract, that this is the rightful owner
         // Return confirmation/rejetion. Confirmation being burning of the tokens in the SPS
 
         return consumer.publicKey;
+    }
+
+    public startAuction() {
+
+    }
+
+    public executeAuction() {
+
     }
 }
